Fix pdf print not having background on mobile

--- a/public_html/Dashboard/getStandings/style.css
+++ b/public_html/Dashboard/getStandings/style.css
@@ -1,6 +1,7 @@
 *{
     margin:0px;
     box-sizing: border-box;
+    print-color-adjust: exact;
 }
 html{
     font-size: 1em;
